<resources>
    <string name="app_name">OCCENTO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home"> </string>
    <string name="menu_see_songs">Alla låtar</string>
    <string name="menu_add_song">Lägg till låt</string>
    <string name="incorrect_song_add">Fyll i alla rutor</string>
    <string name="song_added">Låten är tillagd!</string>
    <string name="title_field">Titel</string>
    <string name="artist_field">Artist</string>
    <string name="lyrics_field">Några rader ur låten</string>
    <string name="add_song_button">Lägg till låt</string>
    <string name="maxCharacterCount">0/100</string>


    <string name="song_lyric">Ser det på dig meddetsamma,
    vet att nånting har hänt,har du träffat någon annan som kan vägen hem?</string>
    <string name="artist"><![CDATA[Norlie & KKV]]></string>
    <string name="game_title">occento</string>
    <string name="gameRules">Spelregler</string>

    <string name="gameintroTitle">Såhär går spelet till:</string>
    <string name="gameIntroduction">Välj en spelare som ska få börja. När spelaren trycker på spela får denne 3 minuter på sig att samla så många poäng som möjligt.
        Spelaren sätter mobiltelefonen i pannan så att bara ni andra spelare ser vad som står på skärmen. Sedan dyker en text från en låt upp på skärmen. Det är då upp till
    er andra att sjunga den låttext som dyker upp utan att säga vad låten heter eller vilken artist det är. Spelaren ska nu försöka gissa vilken låt det är ni sjunger på.
    Gissar spelaren rätt ska denne vinkla skärmen uppåt 90 grader för att få poäng och gå vidare till nästa låt. Vill spelaren passa denna låt vinklas skärmen istället
    nedåt 90 grader, och går då vidare till nästa låt.\n\nSedan kan ni gå laget runt och se vem som är det äkta proffset när det kommer till musik!</string>
    <string name="pointsInfoTitle">När får man poäng?</string>
    <string name="pointsinfoText">Det räcker med att sätta antingen titeln eller artisten för poängen.
        Men för en svårare spelomgång måste spelaren sätta både rätt titel och artist för poäng!</string>
    <string name="total_songs_text">Totala antalet sånger:</string>
    <string name="total_points_text">Antal poäng:</string>
    <string name="back_to_menu_button_text">Tillbaka till menyn</string>
    <string name="play_again_button_text">Spela igen</string>
    <string name="timer_start_value">03:00</string>
    <string name="totalCharacterCount">/100</string>
    <string name="applicationinfoTitle">Hur funkar appen?</string>
    <string name="applicationInfoText">Appen kommer förladdad med ett par låtar. Du kan också lägga till låtar
    med hjälp av "lägg till låt"-funktionen. På sidan "alla låtar" kan du ta bort låtar genom att svepa dem
        åt vänster, även de som kommer med appen. Men för att spela behöver du minst en låt.</string>
</resources>