<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="se.umu.emli.ou3.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_AddSong"
        android:name="se.umu.emli.ou3.ui.addSong.AddSongFragment"
        android:label="@string/menu_add_song"
        tools:layout="@layout/fragment_add_song" />

    <fragment
        android:id="@+id/nav_SeeSongs"
        android:name="se.umu.emli.ou3.ui.seeSongs.SeeSongsFragment"
        android:label="@string/menu_see_songs"
        tools:layout="@layout/fragment_see_songs" />
</navigation>