<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.gameResult.GameResultFragment"
    android:background="@color/primary_green">

    <TextView
        android:id="@+id/nr_Of_points_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_points_text"
        android:fontFamily="@font/rubik_mono_one"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"/>
    <TextView
        android:id="@+id/nr_of_points_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/rubik_mono_one"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/nr_Of_points_text"
        app:layout_constraintTop_toTopOf="@id/nr_Of_points_text"/>

    <TextView
        android:id="@+id/total_nr_of_songs_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_songs_text"
        android:fontFamily="@font/rubik_mono_one"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/nr_Of_points_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/total_nr_of_songs_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/rubik_mono_one"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/total_nr_of_songs_text"
        app:layout_constraintTop_toTopOf="@id/total_nr_of_songs_text"/>


    <Button
        android:id="@+id/play_again_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/play_again_button_text"
        app:layout_constraintTop_toTopOf="@id/total_nr_of_songs_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/custom_button"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />
    <Button
        android:id="@+id/go_to_menu_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu_button_text"
        app:layout_constraintTop_toBottomOf="@id/play_again_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/custom_button"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>