<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@color/primary_green">

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_start_value"
        android:textSize="30sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/songLyric"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/song_lyric"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:lineSpacingExtra="10dp"
        app:layout_constraintTop_toBottomOf="@id/timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/songLyric"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp">
        <TextView
            android:id="@+id/songTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Glad för din skull"
            android:textSize="27sp"
            android:fontFamily="@font/rubik_mono_one"
            android:maxLines="1"
            android:ellipsize="end"/>
        <TextView
            android:id="@+id/songArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:fontFamily="@font/rubik_mono_one"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>